--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan 15 08:10:03 AM JST 2026
+Thu Jan 15 08:15:02 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Allied Telesis Capital Corporation (Misawa) [842.11 km]: 52.086 ms
+Hosted by サーバーならDDPS.jp (Tokyo) [395.69 km]: 40.945 ms
 Testing download speed................................................................................
-Download: 135.75 Mbit/s
+Download: 50.47 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 33.63 Mbit/s
+Upload: 17.23 Mbit/s
