--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Thu Jan 15 09:35:03 AM JST 2026
+Thu Jan 15 09:40:02 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by サーバーならDDPS.jp (Tokyo) [395.69 km]: 38.284 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [395.69 km]: 39.642 ms
 Testing download speed................................................................................
-Download: 51.17 Mbit/s
+Download: 101.23 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 14.45 Mbit/s
+Upload: 31.54 Mbit/s
