--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Thu Jan 15 09:40:02 AM JST 2026
+Thu Jan 15 09:45:02 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [395.69 km]: 39.642 ms
+Hosted by サーバーならDDPS.jp (Tokyo) [395.69 km]: 35.761 ms
 Testing download speed................................................................................
-Download: 101.23 Mbit/s
+Download: 51.78 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 31.54 Mbit/s
+Upload: 15.74 Mbit/s
