--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Thu Jan 15 09:50:02 AM JST 2026
+Thu Jan 15 09:55:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [395.69 km]: 36.901 ms
+Hosted by サーバーならDDPS.jp (Tokyo) [395.69 km]: 37.134 ms
 Testing download speed................................................................................
-Download: 96.32 Mbit/s
+Download: 41.50 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 30.32 Mbit/s
+Upload: 22.24 Mbit/s
