--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan 15 10:20:03 AM JST 2026
+Thu Jan 15 10:25:02 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [395.69 km]: 36.206 ms
+Hosted by Allied Telesis Capital Corporation (Misawa) [842.11 km]: 43.748 ms
 Testing download speed................................................................................
-Download: 96.92 Mbit/s
+Download: 105.34 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 20.98 Mbit/s
+Upload: 28.34 Mbit/s
