--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Thu Jan 15 11:35:02 AM JST 2026
+Thu Jan 15 11:40:02 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Allied Telesis Capital Corporation (Misawa) [842.11 km]: 50.029 ms
+Hosted by サーバーならDDPS.jp (Tokyo) [395.69 km]: 39.959 ms
 Testing download speed................................................................................
-Download: 110.19 Mbit/s
+Download: 54.40 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 29.75 Mbit/s
+Upload: 14.98 Mbit/s
