--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan 15 11:55:02 AM JST 2026
+Thu Jan 15 12:10:03 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Allied Telesis Capital Corporation (Misawa) [842.11 km]: 73.486 ms
+Hosted by Allied Telesis Capital Corporation (Misawa) [842.11 km]: 50.555 ms
 Testing download speed................................................................................
-Download: 103.86 Mbit/s
+Download: 85.11 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 33.26 Mbit/s
+Upload: 27.60 Mbit/s
