--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Thu Jan 15 12:50:02 PM JST 2026
+Thu Jan 15 12:55:03 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Sanda) [36.16 km]: 29.839 ms
+Hosted by サーバーならDDPS.jp (Tokyo) [395.69 km]: 38.256 ms
 Testing download speed................................................................................
-Download: 128.79 Mbit/s
+Download: 60.78 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 28.22 Mbit/s
+Upload: 19.85 Mbit/s
