--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan 15 01:45:02 PM JST 2026
+Thu Jan 15 01:50:02 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [395.69 km]: 43.925 ms
+Hosted by IPA CyberLab (Bunkyo) [402.42 km]: 36.705 ms
 Testing download speed................................................................................
-Download: 62.01 Mbit/s
+Download: 76.85 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 21.02 Mbit/s
+Upload: 26.16 Mbit/s
