--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan 15 02:55:02 PM JST 2026
+Thu Jan 15 03:10:02 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [395.69 km]: 37.928 ms
+Hosted by GSL Networks (Tokyo) [395.69 km]: 40.399 ms
 Testing download speed................................................................................
-Download: 76.11 Mbit/s
+Download: 183.61 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 26.40 Mbit/s
+Upload: 24.78 Mbit/s
