--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan 15 03:20:02 PM JST 2026
+Thu Jan 15 03:25:03 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab 400G (Tokyo) [402.15 km]: 41.392 ms
+Hosted by GSL Networks (Tokyo) [395.69 km]: 38.044 ms
 Testing download speed................................................................................
-Download: 93.28 Mbit/s
+Download: 206.14 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 23.57 Mbit/s
+Upload: 24.75 Mbit/s
