--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Thu Jan 15 03:15:03 PM JST 2026
+Thu Jan 15 03:20:02 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [395.69 km]: 37.395 ms
+Hosted by IPA CyberLab 400G (Tokyo) [402.15 km]: 41.392 ms
 Testing download speed................................................................................
-Download: 81.19 Mbit/s
+Download: 93.28 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 13.71 Mbit/s
+Upload: 23.57 Mbit/s
