--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan 15 03:45:03 PM JST 2026
+Thu Jan 15 03:50:02 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [395.69 km]: 37.302 ms
+Hosted by IPA CyberLab 400G (Tokyo) [402.15 km]: 42.513 ms
 Testing download speed................................................................................
-Download: 106.11 Mbit/s
+Download: 211.72 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 22.19 Mbit/s
+Upload: 25.16 Mbit/s
