--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan 15 03:50:02 PM JST 2026
+Thu Jan 15 03:55:02 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.252.15)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab 400G (Tokyo) [402.15 km]: 42.513 ms
+Hosted by GSL Networks (Tokyo) [395.69 km]: 39.234 ms
 Testing download speed................................................................................
-Download: 211.72 Mbit/s
+Download: 173.56 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 25.16 Mbit/s
+Upload: 26.29 Mbit/s
